fix: add overflow-wrap to product details description

--- a/src/styles/ProductDetails.scss
+++ b/src/styles/ProductDetails.scss
@@ -18,6 +18,10 @@
     font-size: 24px;
   }
 
+  &__description {
+    overflow-wrap: break-word;
+  }
+
   &__img-container {
     min-width: 150px;
     max-width: 250px;
